environments/exercises-gke/ping-pong-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: exercises  
spec:
  parentRefs:
  - name: log-ping-app-gateway
  rules:

  # /pingpong route rewritten to `/`
  # --------------------------------
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 3456
  
  # /pings route
  # ------------
  - matches:      
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: ping-pong-svc
      port: 3456
